# omega-prime-trajdata

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  gen_proto.py  omega_prime_trajdata.py  pyproject.toml  requirements.txt  test.ipynb
src/trajdata/: omega_prime_trajdata.py
src/trajdata/data_structures/: data_index.py
src/trajdata/dataset_specific/nuplan/: nuplan.yaml
src/trajdata/dataset_specific/waymo/: waymo_dataset.py  waymo_utils.py
src/trajdata/dataset_specific/waymo/waymo_proto/: __init__.py
src/trajdata/dataset_specific/waymo/waymo_proto/generated_stubs/waymo/open_dataset/: __init__.py
src/trajdata/dataset_specific/waymo/waymo_proto/generated_stubs/waymo/open_dataset/keypoints/: __init__.py
src/trajdata/dataset_specific/waymo/waymo_proto/generated_stubs/waymo/open_dataset/occupancy_flow/: __init__.py
src/trajdata/maps/: vec_map.py
src/trajdata/proto/generated_stubs/trajdata/: __init__.py
src/trajdata/utils/: map_utils.py
