[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling", "hatch-build-scripts", "ruff", "betterproto2_compiler","grpcio-tools"]
build-backend = "hatchling.build"
[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [
    "python gen_protos.py"
]
[project]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
]
name = "trajdata"
version = "1.4.1"
authors = [{ name = "Boris Ivanovic", email = "bivanovic@nvidia.com" }]
description = "A unified interface to many trajectory forecasting datasets."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0",
    "tqdm>=4.62",
    "matplotlib>=3.5",
    "dill>=0.3.4",
    "pandas>=1.4.1",
    "pyarrow>=7.0.0",
    "torch>=1.10.2",
    "zarr>=2.11.0",
    "kornia>=0.6.4",
    "seaborn>=0.12",
    "bokeh>=3.0.3",
    "geopandas>=0.13.2",
    "scipy>=1.9.0",
    "opencv-python>=4.5.0",
    "shapely>=2.0.0",
    "betterproto2 (>=0.5,<1)"
]

[project.optional-dependencies]
av2 = ["av2==0.2.1"]
dev = ["black", "isort", "pytest", "pytest-xdist", "twine", "build"]
interaction = ["lanelet2"]
lyft = ["l5kit==1.5.0"]
nusc = ["nuscenes-devkit"]
waymo = ["tensorflow>=2.19.0", "intervaltree"]
vod = ["vod-devkit==1.1.1"]

[project.urls]
"Homepage" = "https://github.com/nvr-avg/trajdata"
"Bug Tracker" = "https://github.com/nvr-avg/trajdata/issues"



[tool.setuptools.package-data]
'trajdata' = [
    "src/**/*.proto"
]
